--- a/index.html
+++ b/index.html
@@ -5,26 +5,26 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
       <meta name="description"
-         content="With the divine grace of the almighty, inviting you and your family to Sonali's wedding to be held on 29th November at Ashirwad Garden, Ratu, Ranchi from 7:00 PM onwards.">
-      <meta name="author" content="Vinit Shahdeo">
-      <meta name="email" content="vinitshahdeo@gmail.com">
-      <meta name="copyright" content="Vinit Shahdeo 2020" />
+         content="xxxxxx.">
+      <meta name="author" content="Suvindran">
+      <meta name="email" content="suvindran94@gmail.com">
+      <meta name="copyright" content="Suvindran 2020" />
       <meta property="og:type" content="website" />
-      <meta property="og:title" content="Wedding Invitation | 29th Nov | Ashirwad Garden, Ranchi" />
+      <meta property="og:title" content="Wedding Invitation | May 20th & 21st | AD Grand Ballroom" />
       <meta property="og:description" 
-         content="With the divine grace of the almighty, inviting you and your family to elder sister's wedding to be held on 29th November at Ashirwad Garden, Ratu, Ranchi from 7:00 PM onwards." />
-      <meta property="og:image" content="https://raw.githubusercontent.com/vinitshahdeo/vinitshahdeo/master/images/sonali.jpeg" />
+         content="xxxxx." />
+      <meta property="og:image" content="https://raw.githubusercontent.com/suvinmega/suvinmega.github.io/master/img/BG1.jpg" />
       <meta property="og:url" content="" />
       <meta property="og:site_name" content="Wedding Invitation | 29th Nov" />
       <meta name="twitter:card" content="website">
-      <meta name="twitter:site" content="Wedding Invitation | 29th Nov">
-      <meta name="twitter:title" content="Wedding Invitation | 29th Nov">
+      <meta name="twitter:site" content="Wedding Invitation | 20th May">
+      <meta name="twitter:title" content="Wedding Invitation | 20th May">
       <meta name="twitter:description"
-         content="With the divine grace of the almighty, inviting you and your family to elder sister's wedding to be held on 29th November at Ashirwad Garden, Ratu, Ranchi from 7:00 PM onwards.">
-      <meta name="twitter:creator" content="@Vinit_Shahdeo">
-      <meta name="twitter:image" content="https://raw.githubusercontent.com/vinitshahdeo/vinitshahdeo/master/images/sonali.jpeg">
+         content="xxxxxx">
 
-      <title>Wedding Invitation | Nov 29 | Ashirwad Garden, Ranchi</title>
+      <meta name="twitter:image" content="https://raw.githubusercontent.com/suvinmega/suvinmega.github.io/master/img/BG1.jpg">
+
+      <title>Wedding Invitation | May 20th & 21st | AD Grand Ballroom</title>
 
       <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
       <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Dancing+Script&amp;display=swap'>
@@ -43,7 +43,7 @@
 
       
     
- 
+<div class="sakura-falling"></div>
    <div class="div2">
       <img src="img/BG2.jpg" style="visibility: hidden; height:100%; width:100%; " />
 
@@ -56,31 +56,7 @@
       <script  src="./js/sakura.js"></script>
       <script  src="./js/script.js"></script>
    </body>
-<!---
-   _____                     __  __            ____        __     
-  / ___/____ __   _____     / /_/ /_  ___     / __ \____ _/ /____ 
-  \__ \/ __ `/ | / / _ \   / __/ __ \/ _ \   / / / / __ `/ __/ _ \
- ___/ / /_/ /| |/ /  __/  / /_/ / / /  __/  / /_/ / /_/ / /_/  __/
-/____/\__,_/ |___/\___/   \__/_/ /_/\___/  /_____/\__,_/\__/\___/ 
-    _   __              ___  ____       ___   ____ ___   ____     
-   / | / /___ _   __   |__ \/ __ \     |__ \ / __ \__ \ / __ \    
-  /  |/ / __ \ | / /   __/ / /_/ /     __/ // / / /_/ // / / /    
- / /|  / /_/ / |/ /   / __/\__, /     / __// /_/ / __// /_/ /     
-/_/ |_/\____/|___/   /____/____( )   /____/\____/____/\____/      
-                               |/                                 
--->
 
-<!--
 
-With the divine grace of the almighty,
-I cordially invite you and your family to
-my elder sister's wedding to be held on 29th November at Ashirwad Garden, Ratu, Ranchi 
-from 7:00 PM onwards.
-
-I'd eagerly await your kind presence in auspicious occasion of my family.
-
--->
-
-<!-- Built with love by Vinit Shahdeo -->
 
 </html>
