--- a/index.html
+++ b/index.html
@@ -30,12 +30,20 @@
       <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Dancing+Script&amp;display=swap'>
       <link rel="stylesheet" href="./css/style.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
    </head>
    <body>
       <!-- partial:index.partial.html -->
       <div class="sakura-falling"></div>
     <div class="div1">
-      <center>Suvindran Weds Megalavani</center>
+   
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+     <center><h1>Suvin & Mega</h1></center> 
    <img src="img/BG1.jpg" style="visibility: hidden; height:100%; width:100%; " />
 
 </div>
@@ -53,6 +61,28 @@
 <div class="music">
    <audio src="./mp3/song.mp3" id="my_audio" loop="loop"></audio> 
  </div>
+ <nav class="nav">
+   <a href="#" class="nav__link">
+     <i class="material-icons nav__icon">dashboard</i>
+     <span class="nav__text">Dashboard</span>
+   </a>
+   <a href="#" class="nav__link nav__link--active">
+     <i class="material-icons nav__icon">person</i>
+     <span class="nav__text">Profile</span>
+   </a>
+   <a href="#" class="nav__link">
+     <i class="material-icons nav__icon">devices</i>
+     <span class="nav__text">Devices</span>
+   </a>
+   <a href="#" class="nav__link">
+     <i class="material-icons nav__icon">lock</i>
+     <span class="nav__text">Privacy</span>
+   </a>
+   <a href="#" class="nav__link">
+     <i class="material-icons nav__icon">settings</i>
+     <span class="nav__text">Settings</span>
+   </a>
+ </nav>
       <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
     
       <script  src="./js/sakura.js"></script>
