--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
       <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Dancing+Script&amp;display=swap'>
-      <link rel="stylesheet" href="./css/style.css">
+      <link rel="stylesheet" href="./css/style.css?v=1.1">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
    </head>
@@ -85,8 +85,8 @@
  </nav>
       <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
     
-      <script  src="./js/sakura.js"></script>
-      <script  src="./js/script.js"></script>
+      <script  src="./js/sakura.js?v=1.1"></script>
+      <script  src="./js/script.js?v=1.1"></script>
    </body>
 
 
