--- a/index.html
+++ b/index.html
@@ -8,21 +8,20 @@
          content="xxxxxx.">
       <meta name="author" content="Suvindran">
       <meta name="email" content="suvindran94@gmail.com">
-      <meta name="copyright" content="Suvindran 2020" />
+      <meta name="copyright" content="Suvindran 2022" />
       <meta property="og:type" content="website" />
       <meta property="og:title" content="Wedding Invitation | May 20th & 21st | AD Grand Ballroom" />
       <meta property="og:description" 
          content="xxxxx." />
-      <meta property="og:image" content="https://raw.githubusercontent.com/suvinmega/suvinmega.github.io/master/img/BG1.jpg" />
+      <meta property="og:image" content="https://drive.google.com/uc?export=view&id=1tIkyMBFUXT2zP-E-myQ7ZCoMkxn0CR7k" />
       <meta property="og:url" content="" />
-      <meta property="og:site_name" content="Wedding Invitation | 29th Nov" />
+      <meta property="og:site_name" content="Wedding Invitation | May 20th" />
       <meta name="twitter:card" content="website">
       <meta name="twitter:site" content="Wedding Invitation | 20th May">
       <meta name="twitter:title" content="Wedding Invitation | 20th May">
-      <meta name="twitter:description"
-         content="xxxxxx">
+   
 
-      <meta name="twitter:image" content="https://raw.githubusercontent.com/suvinmega/suvinmega.github.io/master/img/BG1.jpg">
+      <meta name="twitter:image" content="https://drive.google.com/uc?export=view&id=1tIkyMBFUXT2zP-E-myQ7ZCoMkxn0CR7k">
 
       <title>Wedding Invitation | May 20th & 21st | AD Grand Ballroom</title>
 
