--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <meta property="og:title" content="Wedding Invitation | 20th May | Kanthan Kaliamman Temple" />
       <meta property="og:description"
          content="Together with their families inviting you to Suvindran and Megalavani's wedding to be held on 20th May at Kanthan Kaliamman Temple, from 9:30 AM onwards." />
-      <meta property="og:image" content="./img/IMG5.jpeg" />
+      <meta property="og:image:url" content="https://raw.githubusercontent.com/suvinmega/suvinmega.github.io/main/img/IMGTWO.jpeg" />
       <meta property="og:url" content="" />
       <meta property="og:site_name" content="Wedding Invitation | 20th May" />
       <meta name="twitter:card" content="website">
@@ -22,7 +22,7 @@
       <meta name="twitter:description"
          content="Together with their families inviting you to Suvindran and Megalavani's wedding to be held on 20th May at Kanthan Kaliamman Temple, from 9:30 AM onwards.">
       <meta name="twitter:creator" content="@Suvindran94">
-      <meta name="twitter:image" content="./img/IMG5.jpeg">
+      <meta name="twitter:image" content="https://raw.githubusercontent.com/suvinmega/suvinmega.github.io/main/img/IMGTWO.jpeg">
 
       <title>Wedding Invitation | May 20 | Suvindran & Megalavani</title>
 
@@ -424,37 +424,16 @@
                 data-target='#carouselExampleIndicators'
                 data-slide-to='2'
                 ></li>
-                <li
-                data-target='#carouselExampleIndicators'
-                data-slide-to='3'
-                ></li>
-                <li
-                data-target='#carouselExampleIndicators'
-                data-slide-to='4'
-                ></li>
-                <li
-                data-target='#carouselExampleIndicators'
-                data-slide-to='5'
-                ></li>
           </ol>
           <div class='carousel-inner'>
             <div class='carousel-item active'>
-              <img class='img-size img-fluid' src='./img/IMG1.jpeg' alt='First slide' />
+              <img class='img-size img-fluid' src='./img/IMGONE.jpeg' alt='First slide' />
             </div>
             <div class='carousel-item'>
-              <img class='img-size img-fluid' src='./img/IMG2.jpeg' alt='Second slide' />
+              <img class='img-size img-fluid' src='./img/IMGTWO.jpeg' alt='Second slide' />
             </div>
             <div class='carousel-item'>
-              <img class='img-size img-fluid' src='./img/IMG3.jpeg' alt='Third slide' />
-            </div>
-            <div class='carousel-item'>
-              <img class='img-size img-fluid' src='./img/IMG4.jpeg' alt='Fourth slide' />
-            </div>
-            <div class='carousel-item'>
-              <img class='img-size img-fluid' src='./img/IMG5.jpeg' alt='Fifth slide' />
-            </div>
-            <div class='carousel-item'>
-              <img class='img-size img-fluid' src='./img/IMG6.jpeg' alt='Sixth slide' />
+              <img class='img-size img-fluid' src='./img/IMGTHREE.jpeg' alt='Third slide' />
             </div>
           </div>
           <a
