--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <meta property="og:title" content="Wedding Invitation | 20th May | Kanthan Kaliamman Temple" />
       <meta property="og:description"
          content="Together with their families inviting you to Suvindran and Megalavani's wedding to be held on 20th May at Kanthan Kaliamman Temple, from 9:30 AM onwards." />
-      <meta property="og:image:url" content="https://raw.githubusercontent.com/suvinmega/suvinmega.github.io/main/img/IMGTWO.jpeg" />
+      <meta property="og:image:url" content="https://raw.githubusercontent.com/suvinmega/suvinmega.github.io/main/img/IMGHEADER.jpeg" />
       <meta property="og:url" content="" />
       <meta property="og:site_name" content="Wedding Invitation | 20th May" />
       <meta name="twitter:card" content="website">
@@ -22,7 +22,7 @@
       <meta name="twitter:description"
          content="Together with their families inviting you to Suvindran and Megalavani's wedding to be held on 20th May at Kanthan Kaliamman Temple, from 9:30 AM onwards.">
       <meta name="twitter:creator" content="@Suvindran94">
-      <meta name="twitter:image" content="https://raw.githubusercontent.com/suvinmega/suvinmega.github.io/main/img/IMGTWO.jpeg">
+      <meta name="twitter:image" content="https://raw.githubusercontent.com/suvinmega/suvinmega.github.io/main/img/IMGHEADER.jpeg">
 
       <title>Wedding Invitation | May 20 | Suvindran & Megalavani</title>
 
