--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <meta property="og:title" content="Wedding Invitation | 20th May | Kanthan Kaliamman Temple" />
       <meta property="og:description"
          content="Together with their families inviting you to Suvindran and Megalavani's wedding to be held on 20th May at Kanthan Kaliamman Temple, from 9:30 AM onwards." />
-      <meta property="og:image:url" content="https://raw.githubusercontent.com/suvinmega/suvinmega.github.io/main/img/IMGHEADER.jpeg" />
+      <meta property="og:image" content="https://raw.githubusercontent.com/suvinmega/suvinmega.github.io/main/img/IMGHEADER.jpeg" />
       <meta property="og:url" content="" />
       <meta property="og:site_name" content="Wedding Invitation | 20th May" />
       <meta name="twitter:card" content="website">
@@ -91,7 +91,7 @@
            </center> 
 
           <center>
-            <a class="time1">09:30 AM IN THE MORNING</a>
+            <a class="time1">FRIDAY | 09:30 AM</a>
            </center> 
       
           <center>
